Auraforce Community/force-app/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <description>Custom object for Project 2 to consume external API Pokemon Go</description>
    <label>Pokemon</label>
    <nameField>
        <label>Pokemon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>