Auraforce Community/force-app/main/default/objects/Pokemon__c/fields/Base_Experience__c.field-meta.xml
<CustomField>
    <fullName>Base_Experience__c</fullName>
    <label>Base Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>