Auraforce Community/force-app/main/default/objects/Pokemon__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <length>80</length>
    <type>Text</type>
</CustomField>